# cargo-distbuild

./: .gitignore  BUG_FIXES.md  COMPLETE_ARCHITECTURE.md  CONGRATS.md  Cargo.toml  README.md  REBUILD_AND_TEST.md  RUN_DISTRIBUTED_BUILD.md  build.rs  config.toml  demo.sh  nodes.json  test.tar
src/: lib.rs  main.rs  wrapper_main.rs
src/cas/: mod.rs
src/common/: config.rs  error.rs  mod.rs  types.rs
src/master/: cli.rs  commands.rs  mod.rs  repl.rs
src/proto/: distbuild.proto  mod.rs
src/scheduler/: mod.rs
src/worker/: mod.rs
src/wrapper/: mod.rs  rustc_parser.rs
test-workspace/: Cargo.toml
test-workspace/lib-advanced/: Cargo.toml
test-workspace/lib-advanced/src/: lib.rs
test-workspace/lib-common/: Cargo.toml
test-workspace/lib-common/src/: lib.rs
test-workspace/lib-math/: Cargo.toml
test-workspace/lib-math/src/: lib.rs
test-workspace/lib-parser/: Cargo.toml
test-workspace/lib-parser/src/: lib.rs
test-workspace/lib-utils/: Cargo.toml
test-workspace/lib-utils/src/: lib.rs
test-workspace/main-binary/: Cargo.toml
test-workspace/main-binary/src/: main.rs
tests/: integration.rs
