[package]
name = "cargo-distbuild"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12.15", features = ["json", "multipart", "blocking"] }
clap = { version = "4.4.18", features = ["derive"] }
