[package]
name = "cargo-distbuild"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12.15", features = ["json", "multipart", "blocking"] }
clap = { version = "4.4.18", features = ["derive"] }
colored = "3.0.0"
tar = "0.4"
flate2 = "1.0"
tokio = { version = "1.45.0", features = ["full"] }
walkdir = "2.3"
futures = "0.3.31"
tempfile = "3.19.1"
toml_edit = "0.22.6"
toml = "0.8.10"

